less: Prevent inline post clipping in some layouts

--- a/less/posts.mix.less
+++ b/less/posts.mix.less
@@ -43,9 +43,12 @@ article {
 		width: 100%;
 		overflow: hidden; // Prevents vertical zalgo
 	}
-	article .post-container {
-		display: flex;
-    		flex-direction: column;
+	article {
+		display: table;
+		.post-container {
+			display: flex;
+			flex-direction: column;
+		}
 	}
 }
 
